--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "tailwind.config.js",
   "dependencies": {
     "autoprefixer": "^10.4.2",
+    "feather-icons": "^4.28.0",
     "lite-server": "^2.6.1",
     "tailwindcss": "^3.0.21"
   },
