--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "postcss": "^8.4.6",
-    "postcss-cli": "^9.1.0"
+    "postcss-cli": "^9.1.0",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.7"
   }
 }
